# volt-platform

./: .gitignore  .prettierignore  README.md  SETUP_COMPLETE.txt  check-database.ps1  clear-database.ps1  package-lock.json  package.json  reset-volt.ps1  start-backend.ps1  start-dev.bat  start-dev.ps1  start-volt-complete.ps1  start-volt.ps1  test-auth.ps1  test-backend.ps1  test-backend.sh
backend/: .env.example  .gitignore  Cargo.toml  init-db.sql
backend/migrations/: 001_initial_schema.sql  20250526063342_initial_schema.sql  20250526103448_fix_nullable_columns.sql
backend/src/: main.rs
backend/src/api/: mod.rs  server.rs
backend/src/api/middleware/: auth.rs  cors.rs
backend/src/api/routes/: auth.rs  mod.rs  races.rs  synthesis.rs
backend/src/config/: settings.rs
backend/src/core/: mod.rs
backend/src/core/algorithms/: gradient_analysis.rs  mod.rs  route_matching.rs
backend/src/core/models/: mod.rs  race.rs  synthesis.rs  user.rs
backend/src/core/services/: elevation_processor.rs  elevation_service.rs  gpx_parser.rs  itra_calculator.rs  mod.rs
backend/src/db/: mod.rs  models.rs  pool.rs  queries.rs
backend/src/errors/: handlers.rs
backend/src/spatial/: bbox.rs  mod.rs  rtree.rs  segment_index.rs
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/locales/en/: translation.json
frontend/public/locales/ko/: translation.json
frontend/src/: App.tsx  i18n.ts  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/core/config/: constants.ts  environment.ts
frontend/src/core/types/: index.ts  race.ts  synthesis.ts
frontend/src/core/utils/: errors.ts  transform.ts  validation.ts
frontend/src/features/auth/api/: auth.ts
frontend/src/features/auth/components/: LoginForm.tsx  ProtectedRoute.tsx  SignupForm.tsx
frontend/src/features/auth/hooks/: useAuth.ts
frontend/src/features/auth/stores/: authStore.ts
frontend/src/features/race/api/: races.ts
frontend/src/features/race/components/: ElevationChart.tsx  GpxUpload.tsx  GradientDistribution.tsx  RaceLibrary.tsx  RaceLibrarySidebar.tsx  RaceMetadata.tsx  RollingWindowSelector.tsx  SmoothingToggle.tsx
frontend/src/features/race/hooks/: useRaces.ts
frontend/src/features/race/stores/: raceStore.ts
frontend/src/locales/ko/: translation.json
frontend/src/navigation/: AppRouter.tsx  NavigationLinks.tsx  routes.ts
frontend/src/pages/: LandingPage.tsx  LibraryDetailPage.tsx  LibraryPage.tsx  LoginPage.tsx  MatchPage.tsx  SignupPage.tsx  SynthesisPage.tsx
frontend/src/stores/: uiStore.ts
frontend/src/styles/: glass.css  globals.css
frontend/src/ui/components/: Breadcrumbs.tsx  Button.tsx  GlassPanel.tsx  Modal.tsx  Skeleton.tsx  Toast.tsx
frontend/src/ui/layouts/: Footer.tsx  Header.tsx  PageLayout.tsx
frontend/src/ui/theme/: colors.ts  index.ts  typography.ts
(+7 files in other folders)
